@@ -902,56 +902,6 @@ STATEMENT_UPDATE_WIKI_USER = \
     editor = ?, \
     signature = ? \
     where wiki_user_id = ?
-UPGRADE_061_DELETE_ROLE_MAP_ROLE_DELETE = \
-    delete from jam_role_map where role_name = 'ROLE_DELETE'
-UPGRADE_061_DELETE_ROLE_ROLE_DELETE = \
-    delete from jam_role where role_name = 'ROLE_DELETE'
-UPGRADE_063_ALTER_USER_CREATE_IP = \
-    alter table jam_wiki_user alter column create_ip_address varchar(39) not null
-UPGRADE_063_ALTER_USER_LAST_LOGIN_IP = \
-    alter table jam_wiki_user alter column last_login_ip_address varchar(39) not null
-UPGRADE_070_ADD_RECENT_CHANGE_CHARACTERS_CHANGED = \
-    alter table jam_recent_change add column characters_changed INTEGER
-UPGRADE_070_ADD_TOPIC_VERSION_CHARACTERS_CHANGED = \
-    alter table jam_topic_version add column characters_changed INTEGER
-UPGRADE_070_ADD_USER_EDITOR = \
-    alter table jam_wiki_user add column editor VARCHAR(50)
-UPGRADE_070_ADD_USER_EMAIL = \
-    alter table jam_wiki_user add column email VARCHAR(100)
-UPGRADE_070_ADD_USER_SIGNATURE = \
-    alter table jam_wiki_user add column signature VARCHAR(255)
-UPGRADE_070_DROP_ROLE_MAP = \
-    drop table jam_role_map
-UPGRADE_070_DROP_USER_INFO = \
-    drop table jam_wiki_user_info
-UPGRADE_070_DROP_USER_REMEMBER_KEY = \
-    alter table jam_wiki_user drop column remember_key
-UPGRADE_070_INSERT_AUTHORITIES = \
-    insert into jam_authorities (username, authority) \
-    select jam_wiki_user.login, jam_role_map.role_name \
-    from jam_wiki_user, jam_role_map \
-    where jam_wiki_user.wiki_user_id = jam_role_map.wiki_user_id
-UPGRADE_070_INSERT_GROUP_AUTHORITIES = \
-    insert into jam_group_authorities (group_id, authority) \
-    select jam_group.group_id, jam_role_map.role_name \
-    from jam_group, jam_role_map \
-    where jam_group.group_id = jam_role_map.group_id
-UPGRADE_070_INSERT_USERS = \
-    insert into jam_users (username, password) \
-    select login, encoded_password from jam_wiki_user_info
-UPGRADE_070_UPDATE_USER_EMAIL = \
-    update jam_wiki_user set email = ( \
-      select email from jam_wiki_user_info \
-      where jam_wiki_user.wiki_user_id = jam_wiki_user_info.wiki_user_id \
-    )
-UPGRADE_070_UPDATE_TOPIC_VERSION_CHARACTERS_CHANGED = \
-    update jam_topic_version set characters_changed = ( \
-      select (char_length(current_version.version_content) - char_length(coalesce(previous_version.version_content, ''))) \
-      from jam_topic_version current_version \
-      left outer join jam_topic_version previous_version \
-      on current_version.previous_topic_version_id = previous_version.topic_version_id \
-      where jam_topic_version.topic_version_id = current_version.topic_version_id \
-    )
 UPGRADE_080_ADD_FILE_VERSION_USER_DISPLAY = \
     alter table jam_file_version add column wiki_user_display VARCHAR(100)
 UPGRADE_080_ADD_TOPIC_VERSION_VERSION_PARAMS = \
