@@ -115,10 +115,6 @@ STATEMENT_CREATE_WIKI_USER_TABLE = \
       CONSTRAINT jam_p_wuser PRIMARY KEY (wiki_user_id), \
       CONSTRAINT jam_f_wuser_users FOREIGN KEY (login) REFERENCES jam_users(username) \
     )
-UPGRADE_063_ALTER_USER_CREATE_IP = \
-    alter table jam_wiki_user alter column create_ip_address type varchar(39)
-UPGRADE_063_ALTER_USER_LAST_LOGIN_IP = \
-    alter table jam_wiki_user alter column last_login_ip_address type varchar(39)
 UPGRADE_080_ADD_SEQUENCE_GROUP_ID = \
     create sequence jam_group_pk_seq owned by jam_group.group_id;
 UPGRADE_080_ADD_SEQUENCE_GROUP_MEMBERS_ID = \
